# LCO-Workflow

./: LICENSE  README.md  README.txt  Workflow_Guide.md  docs.md  modifystructure.py  pyproject.toml
src/lco_workflow/: .env  Calc_Evac.py  MagMom_recursive.py  ModsCo.txt  PDOS_INCAR.txt  PDOS_plotter.py  POTCAR_cat.py  VASP_input.py  __init__.py  add_atoms.py  add_pairs.py  bulk_to_sc.py  calc_Eads.py  check_contcar.py  chg_diff.py  collect_contcar.py  collect_descriptors.py  createPDOS.py  df_init.py  err_check.py  err_handler.py  gen_random_mods.py  get_descriptors.py  get_e_pristine.py  integrate_pdos.py  intialize.py  main.py  modINCAR.py  modifyLCO.py  pdos_INCARmod.py  remove_atoms.py  remove_li_o_pairs.py  removed_pairs_INCARmod.py  submitall-vasp.sh  vasp.sh  vasp_pdos.py  wf_update.py
src/lco_workflow/descriptors/: collect_descriptors.py  get_descriptors.py
src/lco_workflow/energies/: Calc_Evac.py  calc_Eads.py  get_e_pristine.py
src/lco_workflow/example_files/: SpinPairs.txt
src/lco_workflow/inputs/: MagMom_recursive.py  POTCAR_cat.py  VASP_input.py  modINCAR.py
src/lco_workflow/job_handling/: err_check.py  status_check.py
src/lco_workflow/old-files/: get_bader_chg.py  plot_chgdiff.py
src/lco_workflow/pdos/: createPDOS.py  integrate_pdos.py  pdos_INCARmod.py  tot_int.py
src/lco_workflow/structures/: add_pairs.py  bulk_to_sc.py  modifyLCO.py  remove_li_o_pairs.py
src/lco_workflow/text_files/: BulkE_dict.txt  MagMom_dict.txt  PDOS_INCAR.txt  base_settings.toml  custom_incar_params.txt  pdos_incar_params.toml
src/lco_workflow/utils/: initialize.py
src/matworkforge/: __init__.py  main.py
src/matworkforge/descriptors/: get_descriptors.py
src/matworkforge/energies/: Calc_Evac.py  calc_Eads.py  get_e_pristine.py
src/matworkforge/gen_wf/: bands_input.py  get_bandgap.py  initialize.py  integrate_pdos.py  modify_ignore_sym.py  tot_int.py
src/matworkforge/inputs/: VASP_input.py  removed_pairs_INCARmod.py
src/matworkforge/job_handling/: check_contcar.py  err_handler.py  new_submit.py  preflight.py  submitall-vasp.sh
src/matworkforge/old-files/: modifyLCO.py
src/matworkforge/pdos/: PDOS_plotter.py  createPDOS.py
src/matworkforge/structures/: add_atoms.py  add_pairs.py  bulk_to_sc.py  modify_heo.py  modifystructure.py  remove_atoms.py  remove_pairs.py
(+6 files in other folders)
