[project]
name = "matworkforge"
version = "0.15.2"
description = "A CLI tool for generating & modifying structures for VASP calculations."
authors = [
    {name = "Dorothea Fennell",email = "dfennell1@bnl.gov"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "ase (>=3.25.0,<4.0.0)",
    "pymatgen (>=2026.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "kaleido (==0.2.1)",
    "scipy (>=1.16.1,<2.0.0)",
    "pyvista (>=0.48.4,<0.49.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "matworkforge", from = "src"}]

[tool.poetry.scripts]
wf = "matworkforge.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
